tests/baselines/reference/mergedDeclarationExports.errors.txt
tests/cases/compiler/mergedDeclarationExports.ts(13,11): error TS2395: Individual declarations in merged declaration 'c' must be all exported or all local.
tests/cases/compiler/mergedDeclarationExports.ts(14,18): error TS2395: Individual declarations in merged declaration 'c' must be all exported or all local.
tests/cases/compiler/mergedDeclarationExports.ts(17,11): error TS2395: Individual declarations in merged declaration 'd' must be all exported or all local.
tests/cases/compiler/mergedDeclarationExports.ts(18,14): error TS2395: Individual declarations in merged declaration 'd' must be all exported or all local.
tests/cases/compiler/mergedDeclarationExports.ts(21,11): error TS2395: Individual declarations in merged declaration 'N' must be all exported or all local.
tests/cases/compiler/mergedDeclarationExports.ts(22,18): error TS2395: Individual declarations in merged declaration 'N' must be all exported or all local.


==== tests/cases/compiler/mergedDeclarationExports.ts (6 errors) ====
    // OK -- one is type, one is value
    interface b {}
    export const b = 1;
    
    // OK -- one is a type, one is a namespace, one is a value.
    type t = 0;
    namespace t { interface I {} }
    export const t = 0;
    
    // Should get errors if they have some meaning in common.
    
    // both types
    interface c {}
              ~
!!! error TS2395: Individual declarations in merged declaration 'c' must be all exported or all local.
    export interface c {}
                     ~
!!! error TS2395: Individual declarations in merged declaration 'c' must be all exported or all local.
    
    // both types (class is also value, but that doesn't matter)
    interface d {}
              ~
!!! error TS2395: Individual declarations in merged declaration 'd' must be all exported or all local.
    export class d {}
                 ~
!!! error TS2395: Individual declarations in merged declaration 'd' must be all exported or all local.
    
    // both namespaces
    namespace N { }
              ~
!!! error TS2395: Individual declarations in merged declaration 'N' must be all exported or all local.
    export namespace N {}
                     ~
!!! error TS2395: Individual declarations in merged declaration 'N' must be all exported or all local.
    